--- a/namaste-youtube/src/App.css
+++ b/namaste-youtube/src/App.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.main-container {
+    height: calc(100vh - 3.5rem);
+}
+
+.header-part {
+   position: sticky;
+   top: 0px;
+   z-index: 1;
+   background: #fff;
+}
